# sigmoscan

./: .gitignore  Dockerfile  README.md  example_config.ini  main.py  pyproject.toml
src/: _config.py  _kafka.py  _nfstream.py  _osutils.py
testutils/kafka/consumer/: config.ini  main.py
testutils/kafka/consumer/src/: _config.py  _kafka.py
